Measure the kernel split, then vectorise the three C2 will not (#47)
* Measure where a solve's time goes, instead of reasoning from the total

NOTES records 281,792 iterations in 145 s on `scigrid-de` and concludes from it
that SpMV "is precisely the workload `Kernels` exists to move". That is the
standard expectation for a first-order method, and the 145 s is a whole-solve
number: nothing here had measured the split it is used to argue about.

`KernelSplit` runs the real solve with a `Kernels` decorator that attributes wall
clock per operation. On `scigrid-de` at 1e-4 the answer is **54.5% sparse, 45.5%
dense**. SpMV is the largest single operation by a wide margin and is not the
majority of the time; nearly half the solve is six operations that are flat loops
over contiguous arrays.

That reorders the acceleration work rather than confirming it. A device backend
still has to move SpMV, which is the hard kernel and the one the Cyfra spike
existed to answer — but the cheap half of the win is on the CPU, and there is no
SIMD anywhere in this tree, so 45.5% of the solve is entirely unexploited.

Not a microbenchmark, deliberately. Timing `axpby` in isolation produces a number
that no arithmetic converts into "and therefore N% here"; this measures the real
matrix in the real loop, which is the question a backend decision turns on.

The instrument reports its own overhead rather than asserting it is small: two
`nanoTime` reads cost 17.8 ns on this machine, which is 0.08% of the `scigrid-de`
run and 0.3% of its cheapest operation. On `ac-dc-meshed` the same overhead is
roughly half of `axpby`'s per-call cost, so that network's split is not
trustworthy -- it is printed anyway, because a tool that hides the condition under
which it lies is worse than one that does not measure it. The small networks agree
with the large one at 52-53% sparse, which is reassurance and not evidence: the
distortion falls on the operations with the most calls, which is the direction
that would f